<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              tools:context=".MenuPage"
              android:background="@drawable/menu_page_bg">

    <TextView
            android:text="@string/app_name_am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/menuText"
            android:textColor="#ffffff"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginTop="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start"
            android:textColor="@color/white"
            android:width="175dp"
            android:height="65dp"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/menuText"/>
    <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exit"
            android:textColor="@color/white"
            android:width="175dp"
            android:height="65dp"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/start"/>
</LinearLayout>