<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
            android:id="@+id/add_teammate_dialog"
            android:layout_width="312dp"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/x_button"
                    android:id="@+id/dialog_X"
                    android:layout_marginStart="276dp"
                    android:layout_marginTop="10dp"/>

            <TextView
                    android:text="@string/teammates_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:textSize="20sp"
                    android:textColor="@color/brown"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/dialog_title"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_text_input_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    app:counterEnabled="true"
                    app:errorEnabled="true"
                    app:counterMaxLength="12"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/brown"
                    android:textColorHint="@color/brown"
                    android:textColorHighlight="@color/brown"
                    app:boxStrokeColor="@color/brown"
                    app:boxStrokeWidth="2dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:boxBackgroundMode="outline"
                    android:hint="@string/nickname">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_text"
                        android:layout_width="221dp"
                        android:layout_height="58dp"
                        android:paddingStart="10dp"
                        android:layout_gravity="center"
                        android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                    android:text="@string/add"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:layout_width="150dp"
                    android:layout_height="58dp"
                    android:id="@+id/add_button"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="21dp"
                    android:background="@drawable/button_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>