<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="wrap_content" android:layout_height="match_parent"
              android:orientation="horizontal"
              android:gravity="center"
              tools:context=".CardFlip"
              android:background="@color/brown">

    <RelativeLayout
            android:id="@+id/mainCard"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <androidx.cardview.widget.CardView
                android:id="@+id/cardBack"
                android:layout_width="match_parent"
                android:layout_marginTop="100dp"
                android:layout_height="500dp"
                android:background="@drawable/card_background"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_alignParentTop="true">
            <TextView
                    android:id="@+id/card_name"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="300dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:id="@+id/cardFront"
                android:layout_width="match_parent"
                android:layout_marginTop="100dp"
                android:layout_height="500dp"
                android:translationZ="-1dp"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/card_front_side">
            <LinearLayout
                    android:id="@+id/title"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginTop="35dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                <TextView
                        android:id="@+id/title_text"
                        android:text="@string/user_info"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/profession"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginTop="100dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                <TextView
                        android:id="@+id/profession_title"
                        android:text="@string/profession"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/profession_value"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:textStyle="italic"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toStartOf="@id/profession_title"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/age"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginTop="150dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/profession">
                <TextView
                        android:id="@+id/age_title"
                        android:text="@string/age"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/age_value"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textAlignment="center"
                        android:textStyle="italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toStartOf="@id/age_title"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/phobia"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginTop="200dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/age">
                <TextView
                        android:id="@+id/phobia_title"
                        android:text="@string/phobia"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/phobia_value"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:textStyle="italic"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toStartOf="@id/phobia_title"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/illness"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginTop="250dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/phobia">
                <TextView
                        android:id="@+id/illness_title"
                        android:text="@string/illness"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/illness_value"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:textStyle="italic"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toStartOf="@id/illness_title"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/baggage"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginTop="300dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/illness">
                <TextView
                        android:id="@+id/baggage_title"
                        android:text="@string/baggage"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/baggage_value"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:textStyle="italic"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toStartOf="@id/baggage_title"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/add_info"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginTop="350dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/baggage">
                <TextView
                        android:id="@+id/add_info_title"
                        android:text="@string/add_info"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/add_info_value"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textStyle="italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toStartOf="@id/add_info_title"/>
            </LinearLayout>
            <ImageView
                    android:id="@+id/qrCodeImageView"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="420dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/add_info"/>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>

</LinearLayout>